<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="sound"
        android:title="@string/sound_choose"
        android:defaultValue="true"
        android:summary="@string/sound_choose_summary" />

    <EditTextPreference
        android:key="victory_message"
        android:title="@string/victory_message_choose"
        android:summary=""
        android:defaultValue="@string/estado_humano_gana"  />

    <ListPreference
        android:key="difficulty_level"
        android:title="@string/difficulty_choose"
        android:summary=""
        android:defaultValue="@string/difficulty_expert"
        android:entries="@array/list_difficulty_level"
        android:entryValues="@array/list_difficulty_level" />

</PreferenceScreen>